--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,25 @@
-Flask==0.10.1
-Jinja2==2.7.3
-MarkupSafe==0.23
-SocksiPy-branch==1.01
-Wand==0.4.0
-Werkzeug==0.10.4
-boto==2.38.0
-cffi==0.9.2
-cryptography==0.8.2
+astroid==1.2.0
+audioread==1.2.1
+beets==1.3.10
+dicttoxml==1.5.6
+Django==1.7.1
+django-nap==0.14.0
 enum34==1.0.4
-gcs-oauth2-boto-plugin==1.9
-gnureadline==6.3.3
-google-api-python-client==1.4.0
-httplib2==0.9.1
-ipython==3.1.0
+Flask==0.10.1
 itsdangerous==0.24
-oauth2client==1.4.7
-pgmagick==0.5.10
-pyOpenSSL==0.15.1
-pyasn1==0.1.7
-pyasn1-modules==0.0.5
-pycparser==2.12
-requests==2.7.0
-rethinkdb==2.0.0-1
-retry-decorator==1.0.0
-rsa==3.1.4
-simplejson==3.6.5
-six==1.9.0
-uritemplate==0.6
-wsgiref==0.1.2
+Jinja2==2.7.3
+logilab-common==0.62.0
+MarkupSafe==0.23
+mercurial==3.3.3
+munkres==1.0.7
+musicbrainzngs==0.5
+mutagen==1.27
+pyacoustid==1.1.0
+pygobject==3.14.0
+pylint==1.3.0
+PyYAML==3.11
+requests==2.4.3
+Unidecode==0.4.17
+vboxapi==1.0
+virtualenv==1.11.6
+Werkzeug==0.10.1
